# TensorRT-onnx-dockerized-inference

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  build.sh  run.sh
include/: data_structures.hpp  face_detector.hpp  image_classifier.hpp  image_processor.hpp  object_detector.hpp  trt_engine.hpp  utils.hpp
models/Ultraface/: ultraface-RFB-320.onnx
src/: data_structures.cpp  face_detector.cpp  image_classifier.cpp  image_processor.cpp  object_detector.cpp  trt_engine.cpp  utils.cpp
test/: ResNet50_test.cpp  Ultraface_test.cpp  cat.rgb  main.cpp  resnet_classes.json  test.rgb
